fix: change monitor.sh